crates/libs/frieze-macros/tests/ui/enum_data_carrying_without_tag.stderr
error: frieze: enum `Event` has data-carrying variants but no `#[serde(tag = "...")]` attribute. Add an internal tag to declare the discriminator property, e.g. `#[serde(tag = "kind")]`. Choose a tag name that does not conflict with any field of the inner structs (commonly `type`, `kind`, `label`, `event_type`).
  --> tests/ui/enum_data_carrying_without_tag.rs:19:6
   |
19 | enum Event {
   |      ^^^^^
